--- a/solar_app_html/calculations/general.ipynb
+++ b/solar_app_html/calculations/general.ipynb
@@ -48,13 +48,13 @@
    "source": [
     "#Average prices for PV in 2025 \n",
     "\n",
-    "small_pv = 72500 #kr\n",
+    "small_pv_capex = 72500 #kr\n",
     "small_pv_kWp = 4 #kWp\n",
     "\n",
-    "medium_pv = 102500 #kr\n",
+    "medium_pv_capex = 102500 #kr\n",
     "medium_pv_kWp = 7 #kWp\n",
     "\n",
-    "large_pv = 142500 #kr\n",
+    "large_pv_capex = 142500 #kr\n",
     "large_pv_kWp = 10 #kWp\n",
     "\n",
     "\n",
@@ -67,6 +67,8 @@
     "yearly_savings_small_pv = 7000 #kr (electricity price 2 kr/kWh)\n",
     "yearly_savings_medium_pv = 10500 #kr (electricity price 2 kr/kWh)\n",
     "yearly_savings_large_pv = 14000 #kr (electricity price 2 kr/kWh)\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
