--- a/solar_app_html/calculations/general.ipynb
+++ b/solar_app_html/calculations/general.ipynb
@@ -44,24 +44,49 @@
    "execution_count": null,
    "id": "f3fc01b1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Payback period for small PV system: 11.55 years\n",
+      "Payback period for medium PV system: 10.82 years\n",
+      "Payback period for large PV system: 11.33 years\n",
+      "\n",
+      "Case 1: Small PV system without battery storage\n",
+      "Annual cost: 4633.95 kr\n",
+      "Net savings: 2366.05 kr\n",
+      "\n",
+      "Case 1.1: Small PV system with battery storage\n",
+      "Annual cost: 7190.61 kr\n",
+      "Net savings: -190.61 kr\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#Average prices for PV in 2025 \n",
     "\n",
     "small_pv_capex = 72500 #kr\n",
+    "small_pv_opex = 0.01 * small_pv_capex #kr/year\n",
     "small_pv_kWp = 4 #kWp\n",
     "\n",
     "medium_pv_capex = 102500 #kr\n",
+    "medium_pv_opex = 0.01 * medium_pv_capex #kr/year\n",
     "medium_pv_kWp = 7 #kWp\n",
     "\n",
     "large_pv_capex = 142500 #kr\n",
+    "large_pv_opex = 0.01 * large_pv_capex #kr/year\n",
     "large_pv_kWp = 10 #kWp\n",
     "\n",
     "\n",
-    "battery_storage = 40000 #kr\n",
+    "battery_storage_capex = 40000 #kr\n",
     "\n",
-    "payback_period = 8.5 #years\n",
-    "\n",
+    "r = 0.03 #    discount rate\n",
+    "N_pv = 30 #years (Lifetime of the PV system)\n",
+    "N_battery = 10 #years (Lifetime of the battery storage)\n",
+    "CRF_pv = r * (1 + r) ** N_pv / ((1 + r) ** N_pv - 1) # Capital Recovery Factor\n",
+    "CRF_battery = r * (1 + r) ** N_battery / ((1 + r) ** N_battery - 1) # Capital Recovery Factor for battery storage\n",
     "\n",
     "#reference values for yearly savings on the electricity bill\n",
     "yearly_savings_small_pv = 7000 #kr (electricity price 2 kr/kWh)\n",
@@ -69,20 +94,63 @@
     "yearly_savings_large_pv = 14000 #kr (electricity price 2 kr/kWh)\n",
     "\n",
     "\n",
+    "#Payback period calculation\n",
+    "payback_period_small_pv = small_pv_capex / (yearly_savings_small_pv - small_pv_opex)\n",
+    "payback_period_medium_pv = medium_pv_capex / (yearly_savings_medium_pv - medium_pv_opex)\n",
+    "payback_period_large_pv = large_pv_capex / (yearly_savings_large_pv - large_pv_opex)\n",
+    "print(f\"Payback period for small PV system: {payback_period_small_pv:.2f} years\")\n",
+    "print(f\"Payback period for medium PV system: {payback_period_medium_pv:.2f} years\")\n",
+    "print(f\"Payback period for large PV system: {payback_period_large_pv:.2f} years\\n\")\n",
     "\n",
     "\n",
+    "#Case 1: Small PV system without battery storage\n",
+    "\n",
+    "# Calculate the annual cost of the PV system\n",
+    "annual_cost_small_pv = small_pv_capex * CRF_pv + small_pv_opex\n",
+    "\n",
+    "# Calculate the net savings\n",
+    "net_savings_small_pv = yearly_savings_small_pv - annual_cost_small_pv\n",
     "\n",
     "\n",
+    "print(f\"Case 1: Small PV system without battery storage\")\n",
+    "print(f\"Annual cost: {annual_cost_small_pv:.2f} kr\")\n",
+    "print(f\"Net savings: {net_savings_small_pv:.2f} kr\\n\")\n",
     "\n",
+    "#Case 1.1: Small PV system with battery storage\n",
     "\n",
+    "# Calculate the total capex for the PV system with battery storage\n",
+    "total_capex_small_pv_battery = small_pv_capex + battery_storage_capex\n",
+    "opex_small_pv_battery = small_pv_opex + 0.01 * battery_storage_capex # Assuming 1% of battery cost as annual OPEX\n",
     "\n",
-    "\n"
+    "# Calculate the annual cost of the PV system with battery storage\n",
+    "annual_cost_small_pv_battery = (small_pv_capex * CRF_pv + battery_storage_capex * CRF_battery + opex_small_pv_battery)\n",
+    "\n",
+    "# Calculate the net savings for the PV system with battery storage\n",
+    "net_savings_small_pv_battery = yearly_savings_small_pv - annual_cost_small_pv_battery\n",
+    "\n",
+    "print(f\"Case 1.1: Small PV system with battery storage\")\n",
+    "print(f\"Annual cost: {annual_cost_small_pv_battery:.2f} kr\")\n",
+    "print(f\"Net savings: {net_savings_small_pv_battery:.2f} kr\\n\")\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
