--- a/solar_app_html/calculations/general.ipynb
+++ b/solar_app_html/calculations/general.ipynb
@@ -49,17 +49,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Estimated yearly production for small PV system: 700.00 kWh/year\n",
+      "\n",
       "Payback period for small PV system: 11.55 years\n",
       "Payback period for medium PV system: 10.82 years\n",
       "Payback period for large PV system: 11.33 years\n",
-      "\n",
-      "Case 1: Small PV system without battery storage\n",
-      "Annual cost: 4633.95 kr\n",
-      "Net savings: 2366.05 kr\n",
-      "\n",
-      "Case 1.1: Small PV system with battery storage\n",
-      "Annual cost: 7190.61 kr\n",
-      "Net savings: -190.61 kr\n",
       "\n"
      ]
     }
@@ -67,9 +61,12 @@
    "source": [
     "#Average prices for PV in 2025 \n",
     "\n",
+    "avg_yearly_production_dk = 175 #kWh/m2/year\n",
+    "\n",
     "small_pv_capex = 72500 #kr\n",
     "small_pv_opex = 0.01 * small_pv_capex #kr/year\n",
     "small_pv_kWp = 4 #kWp\n",
+    "small_yearly_production = 3500 #kWh/year\n",
     "\n",
     "medium_pv_capex = 102500 #kr\n",
     "medium_pv_opex = 0.01 * medium_pv_capex #kr/year\n",
@@ -82,6 +79,7 @@
     "\n",
     "battery_storage_capex = 40000 #kr\n",
     "\n",
+    "#Financial parameters\n",
     "r = 0.03 #    discount rate\n",
     "N_pv = 30 #years (Lifetime of the PV system)\n",
     "N_battery = 10 #years (Lifetime of the battery storage)\n",
@@ -103,8 +101,36 @@
     "print(f\"Payback period for large PV system: {payback_period_large_pv:.2f} years\\n\")\n",
     "\n",
     "\n",
-    "#Case 1: Small PV system without battery storage\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7536e890",
+   "metadata": {},
+   "source": [
+    "### Case 1.1: Small PV system without battery storage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "37f11758",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Case 1: Small PV system (4 kWp)\n",
+      "Annual cost: 4423.90 kr\n",
+      "Net savings: 2576.10 kr\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
     "# Calculate the annual cost of the PV system\n",
     "annual_cost_small_pv = small_pv_capex * CRF_pv + small_pv_opex\n",
     "\n",
@@ -112,12 +138,37 @@
     "net_savings_small_pv = yearly_savings_small_pv - annual_cost_small_pv\n",
     "\n",
     "\n",
-    "print(f\"Case 1: Small PV system without battery storage\")\n",
+    "print(f\"Case 1: Small PV system (4 kWp)\")\n",
     "print(f\"Annual cost: {annual_cost_small_pv:.2f} kr\")\n",
-    "print(f\"Net savings: {net_savings_small_pv:.2f} kr\\n\")\n",
-    "\n",
-    "#Case 1.1: Small PV system with battery storage\n",
-    "\n",
+    "print(f\"Net savings: {net_savings_small_pv:.2f} kr\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43feb61b",
+   "metadata": {},
+   "source": [
+    "### #Case 1.2: Small PV system with battery storage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "790aa709",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Case 1.1: Small PV system with battery storage\n",
+      "Annual cost: 9513.12 kr\n",
+      "Net savings: -2513.12 kr\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
     "# Calculate the total capex for the PV system with battery storage\n",
     "total_capex_small_pv_battery = small_pv_capex + battery_storage_capex\n",
     "opex_small_pv_battery = small_pv_opex + 0.01 * battery_storage_capex # Assuming 1% of battery cost as annual OPEX\n",
@@ -130,7 +181,132 @@
     "\n",
     "print(f\"Case 1.1: Small PV system with battery storage\")\n",
     "print(f\"Annual cost: {annual_cost_small_pv_battery:.2f} kr\")\n",
-    "print(f\"Net savings: {net_savings_small_pv_battery:.2f} kr\\n\")\n"
+    "print(f\"Net savings: {net_savings_small_pv_battery:.2f} kr\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46efa955",
+   "metadata": {},
+   "source": [
+    "### Case 2: Medium PV system "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6f107b1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Case 2: Medium PV system (7 kWp)\n",
+      "Annual cost of medium PV system without battery storage: 6254.47 kr/year\n",
+      "\n",
+      "Net savings for medium PV system without battery storage: 4245.53 kr/year\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the annual cost of the PV system\n",
+    "annual_cost_medium_pv = medium_pv_capex * CRF_pv + medium_pv_opex\n",
+    "\n",
+    "\n",
+    "#calculate net savings for medium PV system without battery storage\n",
+    "net_savings_medium_pv = yearly_savings_medium_pv - annual_cost_medium_pv\n",
+    "\n",
+    "print(f\"Case 2: Medium PV system (7 kWp)\")\n",
+    "print(f\"Annual cost of medium PV system without battery storage: {annual_cost_medium_pv:.2f} kr/year\\n\")\n",
+    "print(f\"Net savings for medium PV system without battery storage: {net_savings_medium_pv:.2f} kr/year\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d413e67",
+   "metadata": {},
+   "source": [
+    "### Case 3: Large PV system"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "75b9e88e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Case 3: Large PV system (10 kWp)\n",
+      "Annual cost of large PV system without battery storage: 8695.24 kr/year\n",
+      "\n",
+      "Net savings for large PV system without battery storage: 5304.76 kr/year\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Calculate the annual cost of the PV system\n",
+    "annual_cost_large_pv = large_pv_capex * CRF_pv + large_pv_opex\n",
+    "\n",
+    "#calculate net savings for large PV system without battery storage\n",
+    "net_savings_large_pv = yearly_savings_large_pv - annual_cost_large_pv\n",
+    "\n",
+    "print(f\"Case 3: Large PV system (10 kWp)\")\n",
+    "print(f\"Annual cost of large PV system without battery storage: {annual_cost_large_pv:.2f} kr/year\\n\")\n",
+    "print(f\"Net savings for large PV system without battery storage: {net_savings_large_pv:.2f} kr/year\\n\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab53c70a",
+   "metadata": {},
+   "source": [
+    "### Comparison case with reference values from the internet "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb9b1dc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Annual savings: 4239.20 kr\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Reference case that matches simulation\n",
+    "\n",
+    "#kWp = 4 \n",
+    "E_pv = 3500 #kWh/year (BudgetEnergi.dk)\n",
+    "p_buy = 2.6 #kr/kWh #(DK stsatistics for 2025)\n",
+    "p_spot_sell = 0.616 #kr/kWh (Andel energi for 2025)\n",
+    "load = 4500 #kWh/year (budgetEnergi.dk)\n",
+    "self_consumption = 0.3 #30% of the produced energy is self-consumed (Solartech.dk)\n",
+    "\n",
+    "\n",
+    "E_self = self_consumption * E_pv\n",
+    "E_export = (1 - self_consumption) * E_pv\n",
+    "E_import = max(load - E_self, 0)\n",
+    "\n",
+    "baseline = load * p_buy\n",
+    "system = E_import * p_buy - E_export * p_spot_sell\n",
+    "\n",
+    "yearly_savings = baseline - system\n",
+    "\n",
+    "print(f\"Annual savings: {yearly_savings:.2f} kr\")\n",
+    "\n"
    ]
   }
  ],
